# npm-trends-mcp

./: README.md  pyproject.toml
src/npm_trends_mcp/: __init__.py
